# jsonrpc-c

./: .gitignore  .travis.yml  README.md  configure.ac
example/: Makefile.am  server.c
include/: cJSON.h  jsonrpc-c.h
src/: cJSON.c  jsonrpc-c-priv.h  jsonrpc-c.c
